--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie App</title>
+    <title>Movies Site</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer></script>
 </head>
 
 <body>
 
     <div class="topnav">
-        <a class="active" href="#">Movie App</a>
+        <a class="active" href="/">Movies Site</a>
         <div class="search-container">
-            <form action="" role="search" id="form">
-                <input type="search" id="query" name="q" placeholder="Search movies">
+            <form role="search" id="form">
+                <input type="search" id="query" name="q" placeholder="Search..">
             </form>
         </div>
     </div>
 
-    <div class="row">
-        <div class="column">
-            <div class="card">
-                <center><img src="./assets/kongvsgodz.jpg" alt="Kong vs Godzilla: The new Empire" srcset=""></center>
-                <h3>Movie Title</h3>
-            </div>
+    <div style="padding-left:16px">
+
+        <section id="section">
+            <!--     <div class="row">
+      <div class="column">
+        <div class="card">
+          <center><img src="#" id="image" class="thumbnail"></center>
+          <h3 id="title">Movie Title</h3>
         </div>
-    </div>
+      </div>
+    </div> -->
+        </section>
+
 </body>
+<script src="main.js"></script>
 
 </html>
